src/objects/Location_and_Stage_History__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Controlled_Document__c</fullName>
        <label>Controlled Document</label>
        <referenceTo>Controlled_Document__c</referenceTo>
        <relationshipName>Office_Durations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Division_Code__c</fullName>
        <description>The Division Code indicated for the Controlled Document on which this record is related to.</description>
        <label>Division Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Name__c</fullName>
        <description>The Division Name indicated for the Controlled Document on which this record is related to.</description>
        <label>Division Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Organization_Acronym__c</fullName>
        <description>The Organization Acronym indicated for the Controlled Document on which this record is related to.</description>
        <label>Organization Acronym</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>The Region indicated for the Controlled Document on which this record is related to.</description>
        <label>Region</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>of_Days_New__c</fullName>
        <label># of Days</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Location and Stage History</label>
    <nameField>
        <label>Location</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Location and Stage Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>